--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -1,101 +1,98 @@
-{%extends "base.html" %}
-<!-- Sub banner start -->
-{%block content%}
+{% extends 'base.html' %}
 
-{%load humanize%}
-{%load static%}
+{% block title %} | Home {% endblock %}
+{% block content %}
 
-<!-- <div class="sub-banner overview-bgi">
-    <div class="container breadcrumb-area">
-        <div class="breadcrumb-areas">
-            <h1>Our Car Inventory</h1>
-            <ul class="breadcrumbs">
-                <li><a href="index.html">Home</a></li>
-                <li class="active">Cars</li>
-            </ul>
-        </div>
-    </div>
-</div> -->
+{% load humanize %}
+{% load static %}
 <!-- Banner start -->
+
 <div class="banner" id="banner">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner banner-slider-inner text-center">
             <div class="carousel-item banner-max-height active item-bg">
-                <img class="d-block w-100 h-100" src="{%static 'img/car-1.jpg'%}" alt="banner">
+                <img class="d-block w-100 h-100" src="{% static 'img/car-1.jpg' %}" alt="banner">
                 <div class="carousel-content container banner-info-2 bi-2 text-left">
+                
                     <h3>Wow Factor Standard</h3>
                     <h5>Allow us to guide you through the innovative stress<br>
                         free approach in finding your dream car.</h5>
-                    <a href="{%url 'services'%}" class="btn btn-lg btn-theme">Read more</a>
-                </div> 
+                    <a href="{% url 'services' %}" class="btn btn-lg btn-theme">Read more</a>
+                </div>
             </div>
             <div class="carousel-item banner-max-height item-bg">
-                <img class="d-block w-100 h-100" src="{%static 'img/car-2.jpg'%}" alt="banner">
+                <img class="d-block w-100 h-100" src="{% static 'img/car-2.jpg' %}" alt="banner">
                 <div class="carousel-content container banner-info-2 bi-2 text-left">
                     <h3>Explore Your Dream Car</h3>
                     <h5>Allow us to guide you through the innovative stress<br>
                         free approach in finding your dream car.</h5>
-                    <a href="{%url 'services'%}" class="btn btn-lg btn-theme">Read more</a>
+                    <a href="{% url 'services' %}" class="btn btn-lg btn-theme">Read more</a>
                 </div>
             </div>
             <div class="carousel-item banner-max-height item-bg">
-                <img class="d-block w-100 h-100" src="{% static  'img/car-3.jpg' %}" alt="banner">
+                <img class="d-block w-100 h-100" src="{% static 'img/car-3.jpg' %}" alt="banner">
                 <div class="carousel-content container banner-info-2 bi-2 text-left">
                     <h3>We Are Wheel</h3>
                     <h5>Allow us to guide you through the innovative stress<br>
                         free approach in finding your dream car.</h5>
-                    <a href="{%url 'services'%}" class="btn btn-lg btn-theme">Read more</a>
+                    <a href="{% url 'services' %}" class="btn btn-lg btn-theme">Read more</a>
                 </div>
             </div>
         </div>
+
+
+       
+        
+
         <!-- Search box 3 start -->
         <div class="search-box-4 sb-8">
-            <form action="#" method="">
+            <form action="{% url 'search' %}" method="">
                 <div class="form-group">
                     <input type="text" name="keyword" placeholder="Search by name" class="form-control">
                 </div>
+
                 <div class="form-group">
-                    <select class="form-control search-fields" name="select-brand">
-                        <option selected="true" disabled="disabled">Brand</option>
-                        <option>Audi</option>
-                        <option>BMW</option>
-                        <option>Honda</option>
-                        <option>Nissan</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <select class="form-control search-fields" name="select-make">
+                    <select class="form-control search-fields" name="model">
                         <option selected="true" disabled="disabled">Model</option>
-                        <option>BMW</option>
-                        <option>Honda</option>
-                        <option>Lamborghini Huracán</option>
-                        <option>Sports Car</option>
+                        {%for model in model_search%}
+                        <option value="{{model}}">{{model}}</option>
+
+                        {%endfor%}
+                     
+                      
                     </select>
                 </div>
                 <div class="form-group">
-                    <select class="form-control search-fields" name="select-location">
+                    <select class="form-control search-fields" name="city">
                         <option selected="true" disabled="disabled">Location</option>
-                        <option>United States</option>
-                        <option>United Kingdom</option>
+                        {%for city in city_search%}
+                        <option value="{{city}}">{{city}}</option>
+
+                        {%endfor%}
+                          
+                       
                     </select>
                 </div>
                 <div class="form-group">
-                    <select class="form-control search-fields" name="select-year">
+                    <select class="form-control search-fields" name="year">
                         <option selected="true" disabled="disabled">Year</option>
-                        <option>2016</option>
-                        <option>2017</option>
-                        <option>2018</option>
-                        <option>2019</option>
+                       
+                        {%for year in year_search%}
+                        <option value="{{year}}">{{year}}</option>
+
+                        {%endfor%}
+                       
                     </select>
                 </div>
                 <div class="form-group">
-                    <select class="form-control search-fields" name="select-type">
+                    <select class="form-control search-fields" name="body_style">
                         <option selected="true" disabled="disabled">Select Type Of Car</option>
-                        <option>Sedan</option>
-                        <option>Sports</option>
-                        <option>Hatchback</option>
-                        <option>Pickup Truck</option>
-                        <option>SUV</option>
+                       
+                        {%for body_style in body_style_search%}
+                        <option value="{{body_style}}">{{body_style}}</option>
+
+                        {%endfor%}
+                      
                     </select>
                 </div>
                 <div class="range-slider clearfix">
@@ -125,10 +122,7 @@
 </div>
 <!-- Banner end -->
 
-
-
-
-<!-- Sub Banner end -->
+<!-- Search box 2 end -->
 
 <!-- Featured car start -->
 <div class="featured-car content-area-5">
@@ -145,13 +139,12 @@
                 <div class="slick-slide-item">
                     <div class="car-box-3">
                         <div class="car-thumbnail">
-                            <a href="car-details.html" class="car-img">
+                            <a href="{% url 'car_detail' car.id %}" class="car-img">
                                 <div class="tag-2">Featured</div>
                                 <div class="price-box">
-                                  
-                                    <span>${{car.price |intcomma}}</span>
+                                    <span>${{car.price | intcomma}}</span>
                                 </div>
-                                <img class="d-block w-100" src="{{car.car_photo.url}}" alt="car" style="min-height: 262px; max-height: 262px;" >
+                                <img class="d-block w-100" src="{{car.car_photo.url}}" alt="car" style="min-height: 262px; max-height: 262px;">
                             </a>
                             <div class="carbox-overlap-wrapper">
                                 <div class="overlap-box">
@@ -161,22 +154,26 @@
                                                 <i class="fa fa-expand"></i>
                                                 <img class="hidden" src="{{car.car_photo.url}}">
                                             </a>
-                                            {%if car.car_photo_2 %}
+                                            {% if car.car_photo %}
+                                            <a href="{{car.car_photo.url}}" class="hidden">
+                                                <img class="hidden" src="{{car.car_photo.url}}">
+                                            </a>
+                                            {% endif %}
+                                            {% if car.car_photo_2 %}
                                             <a href="{{car.car_photo_2.url}}" class="hidden">
                                                 <img class="hidden" src="{{car.car_photo_2.url}}">
                                             </a>
-                                            {%endif%}
-                                            {%if car.car_photo_2 %}
+                                            {% endif %}
+                                            {% if car.car_photo_3 %}
                                             <a href="{{car.car_photo_3.url}}" class="hidden">
                                                 <img class="hidden" src="{{car.car_photo_3.url}}">
                                             </a>
-                                            {%endif%}
-                                            {%if car.car_photo_2 %}
+                                            {% endif %}
+                                            {% if car.car_photo_4 %}
                                             <a href="{{car.car_photo_4.url}}" class="hidden">
                                                 <img class="hidden" src="{{car.car_photo_4.url}}">
                                             </a>
-                                            {%endif%}
-                                           
+                                            {% endif %}
                                         </div>
                                     </div>
                                 </div>
@@ -184,16 +181,16 @@
                         </div>
                         <div class="detail">
                             <h1 class="title">
-                                <a href="car-details.html">{{car.car_title}}</a>
+                                <a href="{% url 'car_detail' car.id %}">{{ car.car_title }}</a>
                             </h1>
                             <div class="location">
-                                <a href="car-details.html">
-                                    <i class="flaticon-pin"></i>{{car.state}},{{car.city}}
+                                <a href="{% url 'car_detail' car.id %}">
+                                    <i class="flaticon-pin"></i>{{car.state}}, {{car.city}}
                                 </a>
                             </div>
                             <ul class="facilities-list clearfix">
                                 <li>{{car.fuel_type}}</li>
-                                <li>{{car.miles|intcomma}}</li>
+                                <li>{{car.miles | intcomma}} km</li>
                                 <li>{{car.transmission}}</li>
                                 <li>{{car.body_style}}</li>
                                 <li>{{car.color}}</li>
@@ -202,8 +199,10 @@
                         </div>
                     </div>
                 </div>
-             {%endfor%}
-             <div class="slick-btn">
+            {% endfor %}
+
+            </div>
+            <div class="slick-btn">
                 <div class="slick-prev slick-arrow-buton sab-4">
                     <i class="fa fa-angle-left"></i>
                 </div>
@@ -214,7 +213,7 @@
         </div>
     </div>
 </div>
-
+<!-- Featured car end -->
 
 <!-- Rent car start -->
 <div class="featured-car content-area">
@@ -225,17 +224,17 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
         <div class="row">
-            {%for car in all_cars%}
+          {% for car in all_cars %}
             <div class="col-lg-4 col-md-6">
                 <div class="car-box">
                     <div class="car-thumbnail">
-                        <a href="car-details.html" class="car-img">
+                        <a href="{% url 'car_detail' car.id %}" class="car-img">
                             <div class="tag">For Sale</div>
                             <img class="d-block w-100" src="{{car.car_photo.url}}" alt="car" style="min-height: 262px; max-height: 262px;">
                             <div class="facilities-list clearfix">
                                 <ul>
                                     <li>
-                                        <span><i class="flaticon-way"></i></span>{{car.miles }} km
+                                        <span><i class="flaticon-way"></i></span>{{car.miles | intcomma}} km
                                     </li>
                                     <li>
                                         <span><i class="flaticon-calendar-1"></i></span>{{car.year}}
@@ -254,22 +253,26 @@
                                             <i class="fa fa-expand"></i>
                                             <img class="hidden" src="{{car.car_photo.url}}">
                                         </a>
-                                        {%if car.car_photo_2%}
+                                        {% if car.car_photo %}
+                                        <a href="{{car.car_photo.url}}" class="hidden">
+                                            <img class="hidden" src="{{car.car_photo.url}}">
+                                        </a>
+                                        {% endif %}
+                                        {% if car.car_photo_2 %}
                                         <a href="{{car.car_photo_2.url}}" class="hidden">
                                             <img class="hidden" src="{{car.car_photo_2.url}}">
                                         </a>
-                                        {%endif%}
-                                        {%if car.car_photo_3%}
+                                        {% endif %}
+                                        {% if car.car_photo_3 %}
                                         <a href="{{car.car_photo_3.url}}" class="hidden">
                                             <img class="hidden" src="{{car.car_photo_3.url}}">
                                         </a>
-                                        {%endif%}
-                                        {%if car.car_photo_4%}
+                                        {% endif %}
+                                        {% if car.car_photo_4 %}
                                         <a href="{{car.car_photo_4.url}}" class="hidden">
                                             <img class="hidden" src="{{car.car_photo_4.url}}">
                                         </a>
-                                        {%endif%}
-                    
+                                        {% endif %}
                                     </div>
                                 </div>
                             </div>
@@ -277,11 +280,11 @@
                     </div>
                     <div class="detail">
                         <h1 class="title">
-                            <a href="car-details.html">{{car.car_title}}</a>
+                            <a href="{% url 'car_detail' car.id %}">{{car.car_title}}</a>
                         </h1>
                         <div class="location">
-                            <a href="car-details.html">
-                                <i class="flaticon-pin"></i>{{car.state}} ,{{car.city}}
+                            <a href="{% url 'car_detail' car.id %}">
+                                <i class="flaticon-pin"></i>{{car.state}}, {{car.city}}
                             </a>
                         </div>
                     </div>
@@ -290,22 +293,77 @@
                             <p class="cartype">{{car.body_style}}</p>
                         </div>
                         <div class="pull-right">
-                            <p class="price">${{car.price|intcomma}}</p>
+                            <p class="price">$ {{car.price | intcomma}}</p>
                         </div>
                     </div>
                 </div>
             </div>
-            {%endfor%}
+          {% endfor %}
+
         </div>
     </div>
 </div>
 <!-- Rent car end -->
-<!-- Footer start -->
-
-<!-- Footer end -->
 
 
+<!-- Our team start -->
+<div class="our-team content-area bg-grea-3">
+    <div class="container">
+        <!-- Main title -->
+        <div class="main-title">
+            <h1>Executive <span>Team</span></h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
+        </div>
+        <!-- Slick slider area start -->
+        <div class="slick-slider-area clearfix">
+            <div class="row slick-carousel" data-slick='{"slidesToShow": 4, "responsive":[{"breakpoint": 1024,"settings":{"slidesToShow": 2}}, {"breakpoint": 768,"settings":{"slidesToShow": 1}}]}'>
+              {% for team in teams %}
+                <div class="slick-slide-item">
+                    <div class="team-1">
+                        <div class="photo">
+                            <a href="#">
+                                <img src="{{ team.photo.url }}" alt="team-1" class="img-fluid">
+                            </a>
+                            <div class="social-list clearfix">
+                                <a href="{{team.facebook_link}}" target="_blank" class="facebook-bg"><i class="fa fa-facebook"></i></a>
+                                <a href="{{team.twitter_link}}" target="_blank" class="twitter-bg"><i class="fa fa-twitter"></i></a>
+                                <a href="{{team.google_plus_link}}" target="_blank" class="google-bg"><i class="fa fa-google"></i></a>
+                            </div>
+                        </div>
+                        <div class="details">
+                            <h4><a href="#">{{team.first_name}} {{team.last_name}}</a></h4>
+                            <h5>{{team.designation}}</h5>
+                        </div>
+                    </div>
+                </div>
+              {% endfor %}
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Our team end -->
 
-{%endblock%}
+<!-- Intro section start -->
+<div class="intro-section">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-9 col-md-8 col-sm-12">
+                <div class="intro-text">
+                    <h3>Do You Have Questions ?</h3>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-12">
+                <a href="{% url 'contact' %}" class="btn btn-md">Get in Touch</a>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Intro section end -->
 
 
+
+
+
+
+
+{% endblock %}
